g4ad support in make-ami.sh legal CLA and more open source docs added